--- a/css/style.css
+++ b/css/style.css
@@ -22,19 +22,76 @@ html {
     clear: both;
 }
 
+.right {
+    float: right;
+}
+
+.left {
+    float: left;
+}
+
+ul {
+    list-style: none;
+}
+
+
+/* HEADER */
+
+/* Header - Menu */
+
+nav {
+    width: 100%;
+    height: 4em;
+}
+
+nav li {
+    color: black;
+    font-size: .9em;
+    font-weight: 600;
+    margin: 0 1em 0;
+    line-height: 4em;
+    display: inline-block;
+}
+
+nav a {
+    color: inherit;
+    text-decoration: none;
+    padding: 1.6em 0;
+    vertical-align: middle;
+}
+
+nav a img {
+    width: 90%;
+    vertical-align: middle;
+}
+
+nav .button a {
+    color: white;
+    font-size: .8em;
+    padding: .6em 1.5em;
+    background-color: #0061FF;
+}
+
+/* Menu - Hover */
+
+.border_bottom {
+    border-bottom: none;
+}
+
+.border_bottom:hover {
+    border-bottom: 2px solid black;
+}
+
+.button a:hover {
+    background-color: #5192fa;
+}
+
+
+
+
 
 /* TEST */
 
-header {
-    background-color: blueviolet;
-    width: 100%;
-}
-
-nav {
-    background-color: cadetblue;
-    width: 100%;
-    height: 3em;
-}
 
 .jumbotron {
     background-color: chartreuse;
