--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,10 @@ h5 {
     margin-top: 4em;
 }
 
+.mt_5 {
+    margin-top: 5em;
+}
+
 .mt_8 {
     margin-top: 8em;
 }
@@ -328,6 +332,26 @@ nav a img {
 }
 
 
+/* OPERATIONS */
+
+.t_col {
+    width: 29%;
+    font-size: .9em;
+}
+
+.second_t_col {
+    margin-right: 6.5%;
+    margin-left: 6.5%;
+}
+
+.operations_table img {
+    width: 100%;
+}
+
+.underline {
+    text-decoration: underline;
+}
+
 
 
 
@@ -347,10 +371,7 @@ main {
     margin: 0 auto;
 }
 
-.operations {
-    background-color: darkorange;
-    height: 300px;
-}
+
 
 .more {
     background-color: brown;
