--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,7 @@ h5 {
     margin-top: 11em;
 }
 
+
 /* Margin bottom */
 
 .mb_1 {
@@ -101,6 +102,18 @@ h5 {
 
 .pt_3 {
     padding-top: 3em;
+}
+
+.pt_5 {
+    padding-top: 5em;
+}
+
+.pb_3 {
+    padding-bottom: 3em;
+}
+
+.pb_5 {
+    padding-bottom: 5em;
 }
 
 .bd_top {
@@ -194,7 +207,7 @@ nav a img {
 
 .jumbotron {
     width: 100%;
-    height: calc(100vh - 3.5em);
+    height: 100vh;
     background-color: #B4D0E7;
     padding: 8em 0 2em;
 }
@@ -343,6 +356,7 @@ nav a img {
 
 /* OPERATIONS */
 
+
 .t_col {
     width: 29%;
     font-size: .9em;
@@ -362,65 +376,32 @@ nav a img {
 }
 
 
+/* MORE */
+
+.more {
+    background-color: yellow;
+}
+
+
 /* MEMBERS */
 
-.mem_col_center {
-    width: 40vw;
+.members_container {
+    width: 100vw;
     height: 30vw;
-    padding: 2.2em;
-    font-size: .9em;
-    overflow-y: scroll;
-    background-color: lightgray;
+    background-color: red;
 }
 
-.mem_col_center img {
-    width: 9vw;
-}
+.mem_col
 
-.square {
-    width: 15vw;
-    height: 15vw;
-}
 
-svg {
+/* TRY IT */
+
+.try_it {
+    background-color: lightblue;
     width: 100%;
-    height: 100%;
-    padding: 3.5vw;
-    fill: white;
+    height: 300px;
 }
 
-#designit {
-    background-color: darkseagreen;
-}
-
-#arizona_university {
-    background-color: rgb(71, 31, 31);
-}
-
-#florida_university {
-    background-color: dodgerblue;
-}
-
-#topps {
-    background-color: tomato;
-     
-}
-
-#hearst_corp {
-    background-color: lightskyblue;
-}
-
-#world_bicycle {
-    background-color: maroon;
-}
-
-#clear_channel {
-    background-color: khaki;
-}
-
-#lonely_planet {
-    background-color: midnightblue;
-}
 
 
 
@@ -428,13 +409,15 @@ svg {
 /* TEST */
 
 .container {
-    background-color: white;
+    background-color: blueviolet;
     width: 70%;
     margin: 0 auto;
 }
 
 .faq {
     background-color: greenyellow;
+    width: 100%;
+    height: 300px;
 }
 
 .footer_list {
