--- a/css/style.css
+++ b/css/style.css
@@ -151,20 +151,36 @@ h5 {
 
 /* COMMON - Buttons */
 
-
-
-/* .button {
-    display: inline-block;
-    text-decoration: none;
+.button_blu {
+    padding: .6em 1.5em;
+    background-color: #0061FF;
     color: white;
-    padding: 8px 16px;
-    background-color: blue;
-} */
+}
 
-/* .button:hover {
-    background-color: cornflowerblue;
-} */
+.button_blu_long {
+    display: inline-block;
+    width: 100%;
+    padding: .6em;
+    text-align: center;
+    background-color: #0061FF;
+    color: white;
+}
 
+.button_white_border {
+    padding: .6em 1.5em;
+    border: 1px solid black;
+    background-color: white;
+    color: black;
+}
+
+.button_white_long {
+    display: inline-block;
+    width: 100%;
+    padding: .6em;
+    text-align: center;
+    background-color: white;
+    color: black;
+}
 
 
 /* COMMON - List */
@@ -200,6 +216,7 @@ nav li {
 
 nav a {
     padding-bottom: 1.7em;
+    color: black;
 }
 
 nav a img {
@@ -409,6 +426,14 @@ input[type="radio"]:checked {
 
 .underline {
     text-decoration: underline;
+}
+
+
+/* MORE */
+
+.more a {
+    text-decoration: underline;
+    color: #0061FF;
 }
 
 
